# motion_bench_maker

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-docker-server.sh  package.xml
benchmark/: benchmark_baxter_experience.sh  benchmark_baxter_grid.sh  benchmark_baxter_time.sh  benchmark_fetch_grid.sh  benchmark_fetch_time.sh  benchmark_panda_grid.sh  benchmark_panda_opt.sh  benchmark_ur5_experience.sh  benchmark_ur5_grid.sh  benchmark_ur5_opt.sh  benchmark_ur5_times.sh
configs/ompl/: ompl_planning_baxter.yaml  ompl_planning_fetch.yaml  ompl_planning_fetch_old.yaml  ompl_planning_panda.yaml  ompl_planning_shadow.yaml  ompl_planning_ur5.yaml  ompl_planning_yumi.yaml
configs/problems/: bookshelf_small_baxter.yaml  bookshelf_small_fetch.yaml  bookshelf_small_panda.yaml  bookshelf_small_shadowhand.yaml  bookshelf_small_ur5.yaml  bookshelf_tall_baxter.yaml  bookshelf_tall_both_arms_baxter.yaml  bookshelf_tall_both_arms_easy_baxter.yaml  bookshelf_tall_both_arms_medium_baxter.yaml  bookshelf_tall_fetch.yaml  bookshelf_tall_panda.yaml  bookshelf_tall_shadowhand.yaml  bookshelf_tall_ur5.yaml  bookshelf_thin_baxter.yaml  bookshelf_thin_fetch.yaml  bookshelf_thin_panda.yaml  bookshelf_thin_shadowhand.yaml  bookshelf_thin_ur5.yaml  box_baxter.yaml  box_fetch.yaml  box_panda.yaml  box_shadowhand.yaml  box_ur5.yaml  cage_baxter.yaml  cage_fetch.yaml  cage_panda.yaml  cage_shadowhand.yaml  cage_ur5.yaml  kitchen_baxter.yaml  kitchen_fetch.yaml  kitchen_panda.yaml  kitchen_shadowhand.yaml  kitchen_ur5.yaml  pregrasp_shadowhand.yaml  pregrasp_shadowhand_ball.yaml  pregrasp_shadowhand_metal.yaml  pregrasp_shadowhand_mug.yaml  pregrasp_shadowhand_scissors.yaml  table_bars_baxter.yaml  table_bars_fetch.yaml  (+13 more)
configs/robots/: baxter.yaml  fetch.yaml  panda.yaml  shadowhand.yaml  ur5.yaml  yumi.yaml
configs/rviz/: nice_scene.rviz  visualize.rviz
configs/scenes/bookshelf/: all_queries_small.yaml  all_queries_tall.yaml  easy_queries_small.yaml  easy_queries_small_shadow.yaml  easy_queries_tall.yaml  easy_queries_tall_shadow.yaml  easy_queries_thin.yaml  easy_queries_thin_shadow.yaml  hard_queries_small.yaml  hard_queries_tall.yaml  hard_queries_thin.yaml  medium_queries_tall.yaml  scene_small.yaml  scene_tall.yaml  scene_thin.yaml  sensors_small.yaml  sensors_tall.yaml  sensors_thin.yaml  variation_small.yaml  variation_tall.yaml  variation_tall_limited.yaml  variation_tall_medium.yaml  variation_thin.yaml
configs/scenes/box/: all_queries_box.yaml  easy_queries_box.yaml  hard_queries_box.yaml  scene_box.yaml  sensors_box.yaml  variation_box.yaml
configs/scenes/cage/: queries_cage.yaml  scene_cage.yaml  sensors_cage.yaml  variation_cage.yaml
configs/scenes/kitchen/: all_queries.yaml  baxter_queries.yaml  easy_queries.yaml  hard_queries.yaml  kitchen.urdf  kitchen.yaml  sensors.yaml  variation.yaml
configs/scenes/kitchen/meshes/: cupboard.stl  cupboard_door_l.stl  cupboard_door_r.stl  dishwasher_door.stl  kitchen_counter.stl
configs/scenes/pregrasp/: ball.urdf  metal.urdf  mug.urdf  queries_ball.yaml  queries_metal.yaml  queries_mug.yaml  scaleSTL.py  scene.yaml  sensors_metal.yaml  stl2urdf.py  variation_ball.yaml  variation_metal.yaml  variation_mug.yaml
configs/scenes/pregrasp/meshes/: ball.stl  metal.stl  mug.stl  scissors.stl  table.stl
configs/scenes/table/: queries_pick_table.yaml  queries_under_pick_table.yaml  queries_under_pick_table_shadow.yaml  scene_table.yaml  sensors_table.yaml  variation_table.yaml
configs/scenes/table_bars/: queries.yaml  sensors.yaml  single_arm_queries.yaml  table_bars.urdf  variation.yaml
configs/scenes/table_bars/meshes/: left_bars.stl  right_bars.stl  shelves.stl
configs/sensors/: camera.yaml
docker/: Dockerfile  build-docker.sh  run-docker.sh
docker/noetic-src/: Dockerfile  build-docker.sh
include/motion_bench_maker/: octomap_generator.h  parser.h  problem_generator.h  sanitizer.h  scene_sampler.h  setup.h  yaml.h
launch/: benchmark.launch  generate.launch  rviz.launch  sample_scenes.launch  sensed_scenes.launch  urdf_scenes.launch  visualize.launch
noetic-src/: Dockerfile  build-docker.sh
problems/: clear_all.sh  download.sh  generate_all_baxter.sh  generate_all_fetch.sh  generate_all_panda.sh  generate_all_shadow.sh  generate_all_ur5.sh
scripts/: benchmark.cpp  generate.cpp  paper_example.cpp  sample_scenes.cpp  sensed_scenes.cpp  train.cpp  urdf_scenes.cpp  visualize.cpp
src/: octomap_generator.cpp  problem_generator.cpp  scene_sampler.cpp  setup.cpp  yaml.cpp
